src/test/deca/context/invalid/provided/expects_field.deca
//Resultats :
//Erreur contextuelle
//Ligne 8: type class expects a field or a method
class A {}
{
int x = 0;
A a = new A();
int y = a.x;
}
